# lc

./: README.md  lc.cabal
lib/: IdInt.hs  Lambda.hs  Simple.hs  Unique.hs
src/: Main.hs
