name:                lc
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/lc#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

library
  hs-source-dirs:      lib
  exposed-modules:     Lambda, IdInt, Simple, Unique
  build-depends:       base >= 4.7 && < 5
                     , pretty >= 1.1.3.3
                     , containers
                     , mtl
  default-language:    Haskell2010

executable lc
  hs-source-dirs:      src
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , lc
                     , haskeline
                     , mtl
